<resources>
    <string name="app_name">GeekNewsChr</string>
    <string name="info">资讯</string>
    <string name="zhihu">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="glod">稀土掘进</string>
    <string name="V2EX">V2EX</string>
    <string name="options">选项</string>
    <string name="collection">收藏</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>

    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="special_show">首页特别展示</string>
    <string name="sections">专栏</string>
    <string name="secendTab">程序员</string>
    <string name="GreekNews">GreekNews</string>
</resources>
